fix: 实现表头横向滚动联动
- 添加 scrollLeft 数据字段
- 右侧表头和数据体共享横向滚动位置
- 当数据体横向滚动时，表头同步滚动
- 完善左右滚动联动逻辑

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -65,7 +65,13 @@
     <!-- 右侧可滚动列 -->
     <view class="scroll-right">
       <!-- 表头 -->
-      <scroll-view class="table-header" scroll-x enhanced show-scrollbar="{{false}}">
+      <scroll-view 
+        class="table-header" 
+        scroll-x 
+        enhanced 
+        show-scrollbar="{{false}}"
+        scroll-left="{{scrollLeft}}"
+      >
         <view class="header-content">
           <view class="col-premium">溢价率</view>
           <view class="col-status">状态</view>
@@ -85,6 +91,7 @@
         enhanced 
         show-scrollbar="{{false}}"
         scroll-top="{{scrollTop}}"
+        scroll-left="{{scrollLeft}}"
         bindscroll="onRightScroll"
       >
         <view 
