--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -180,6 +180,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center; /* 水平居中 */
 }
 
 .fund-name {
@@ -188,12 +189,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 100%;
+  text-align: center; /* 文字居中 */
 }
 
 .fund-code {
   font-size: 22rpx;
   color: #1890ff;
   margin-top: 4rpx;
+  text-align: center; /* 文字居中 */
 }
 
 .col-premium {
@@ -202,8 +206,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 16rpx;
+  justify-content: center; /* 改为居中 */
   font-size: 30rpx;
   font-weight: 600;
 }
@@ -223,8 +226,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 16rpx;
+  justify-content: center; /* 改为居中 */
   font-size: 26rpx;
   color: #666;
 }
@@ -235,8 +237,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 16rpx;
+  justify-content: center; /* 改为居中 */
   font-size: 26rpx;
 }
 
@@ -246,8 +247,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 16rpx;
+  justify-content: center; /* 改为居中 */
   font-size: 24rpx;
   color: #666;
 }
@@ -269,8 +269,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 16rpx;
+  justify-content: center; /* 改为居中 */
   font-size: 24rpx;
   color: #666;
 }
@@ -281,8 +280,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  padding-right: 16rpx;
+  justify-content: center; /* 改为居中 */
   font-size: 24rpx;
   color: #666;
 }
@@ -295,13 +293,15 @@
 }
 
 .tag-limited {
-  color: #fa8c16;
-  background: #fff7e6;
+  color: #52c41a; /* 绿色 */
+  background: #f6ffed;
+  border: 1rpx solid #b7eb8f;
 }
 
 .tag-suspended {
-  color: #f5222d;
-  background: #fff1f0;
+  color: #8c8c8c; /* 灰色 */
+  background: #f5f5f5;
+  border: 1rpx solid #d9d9d9;
 }
 
 /* 颜色工具类 */
