--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -77,11 +77,35 @@
   line-height: 60rpx;
   background: #fafafa;
   border-bottom: 1rpx solid #e8e8e8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24rpx;
+  color: #999;
+}
+
+.fixed-left .table-header .col-name {
+  width: 100%;
+  padding: 0;
+  min-height: auto;
+  height: 60rpx;
+  text-align: center;
 }
 
 .fixed-body {
   flex: 1;
   height: calc(100vh - 210rpx);
+}
+
+/* 左侧数据行 */
+.fixed-left .table-row {
+  min-height: 100rpx;
+  height: auto; /* 允许自动高度 */
+}
+
+.fixed-left .col-name {
+  padding: 12rpx;
+  min-height: 100rpx;
 }
 
 /* 右侧可滚动列 */
@@ -125,11 +149,17 @@
   align-items: center; /* 确保所有子元素垂直居中 */
   border-bottom: 1rpx solid #f0f0f0;
   min-height: 100rpx;
+  height: auto; /* 允许自动高度 */
   background: #fff;
 }
 
 .table-row.row-alt {
   background: #fafafa;
+}
+
+/* 右侧数据行的列也需要最小高度 */
+.scroll-body .table-row > view {
+  min-height: 100rpx;
 }
 
 /* 加载和错误状态 */
