fix: 修正QDII表头名称和完善styles默认值
- QDII表头：T-1溢价 -> T-1溢价率，实时溢价 -> 实时溢价率
- 为所有数据类型提供完整的styles默认结构
- 确保颜色正确显示（红涨绿跌）

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -153,8 +153,8 @@
         <view class="header-content">
           <view class="col-price">现价</view>
           <view class="col-change">涨幅</view>
-          <view class="col-premium">T-1溢价</view>
-          <view class="col-premium">实时溢价</view>
+          <view class="col-premium">T-1溢价率</view>
+          <view class="col-premium">实时溢价率</view>
           <view class="col-status">申购状态</view>
           <view class="col-nav-date">净值日期</view>
           <view class="col-nav-date">估值日期</view>
