fix: 修正QDII字段映射关系
根据API实际返回数据调整字段映射：
- premium_rate_t1 实际是 T-1估值
- rt_premium_rate 是溢价率
- valuation_t1 是估值日期

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -183,7 +183,7 @@
             {{item.change}}
           </view>
           <view class="col-premium" style="color: {{item.styles.premium_rate_t1.color || '#333'}}">
-            {{item.premium_rate_t1}}
+            {{item.t1_valuation}}
           </view>
           <view class="col-premium" style="color: {{item.styles.rt_premium_rate.color || '#333'}}">
             {{item.rt_premium_rate}}
