feat: 为QDII表格所有列启用动态颜色
- 根据API最新结构，所有字段现在都返回styles信息
- 更新WXML，为QDII表格每一列从左到右绑定对应的color样式
- 确保T-1溢价率等关键指标能正确显示红色/绿色

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -178,7 +178,7 @@
           wx:for="{{lofList}}" 
           wx:key="code"
         >
-          <view class="col-price">{{item.price}}</view>
+          <view class="col-price" style="color: {{item.styles.price.color || '#333'}}">{{item.price}}</view>
           <view class="col-change" style="color: {{item.styles.change_pct.color || '#333'}}">
             {{item.change}}
           </view>
@@ -191,11 +191,11 @@
           <view class="col-status">
             <text style="color: {{item.styles.apply_status.color || '#333'}}">{{item.status}}</text>
           </view>
-          <view class="col-nav-date">{{item.nav_date}}</view>
-          <view class="col-nav-date">{{item.valuation_date}}</view>
-          <view class="col-amount">{{item.volume}}</view>
-          <view class="col-shares">{{item.shares}}</view>
-          <view class="col-shares-change">{{item.shares_change}}</view>
+          <view class="col-nav-date" style="color: {{item.styles.nav_date.color || '#999'}}">{{item.nav_date}}</view>
+          <view class="col-nav-date" style="color: {{item.styles.valuation_date.color || '#999'}}">{{item.valuation_date}}</view>
+          <view class="col-amount" style="color: {{item.styles.volume.color || '#333'}}">{{item.volume}}</view>
+          <view class="col-shares" style="color: {{item.styles.shares.color || '#333'}}">{{item.shares}}</view>
+          <view class="col-shares-change" style="color: {{item.styles.shares_change.color || '#333'}}">{{item.shares_change}}</view>
         </view>
       </scroll-view>
     </view>
