style: 调小QDII申购状态列的字体大小
- 内容列 .col-status 字体设为 22rpx
- 表头 .table-header .col-status 保持 24rpx

--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -250,6 +250,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 22rpx; /* 表格内容字体设小 */
+}
+
+/* 表头保持默认或稍大 */
+.table-header .col-status {
+  font-size: 24rpx;
 }
 
 .col-price {
